<resources>
    <string name="app_name">My Application</string>
    <string name="hello">Hello Again!</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="auch">Auch!</string>
    <string name="fragment_one_title">I am fragment one!</string>
    <string name="fragment_two_title">I am fragment two!</string>
    <string name="replace_me">Replace me</string>
    <string name="get_to_do_items">Get To Do Items</string>
    <string name="i_am_tired">I am tired.\nLet\'s go back to Fragment 1</string>
    <string name="go_to_fr_3">Go to Fragment 3</string>
    <string name="go_to_fr_4">Go to Fragment 4</string>
    <string name="remove_fr_1">Remove Fragment 1</string>
    <string name="stop_activity">Stop activity!</string>
    <string name="i_am_batman">I am Batman!</string>
    <string name="add_fragment_one">Add Fragment One</string>
    <string name="add_item_to_recycler">Add Element</string>
    <string name="add_user_to_database">Add User Into Database</string>
</resources>
