<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_mytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_one_title"
        app:layout_constraintBottom_toTopOf="@id/btn_replaceFragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_replaceFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replace_me"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/btn_getToDoItems"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_mytext"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_getToDoItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_to_do_items"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/btn_stopActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_replaceFragment"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_stopActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_replaceFragment" />
</androidx.constraintlayout.widget.ConstraintLayout>